--- a/events_app/templates/event_detail.html
+++ b/events_app/templates/event_detail.html
@@ -41,7 +41,7 @@
             </p>
             <p>
                 <label>
-                    Your Phone Number:
+                    Your Phone Number (no.):
                     <input type="phone" name="phone">
                 </label>
             </p>
